# ArchMIE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PKGBUILD  README.md  STRUCTURE.md  commands.json  index.html  index.py  package.json  pnpm-lock.yaml  theme.json  theme_variables.py  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.md  RELEASE_GUIDE.md
packaging/: PKGBUILD  archmie.desktop
pages/: commands.json  commands_page.py  settings_page.py
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/context/: ThemeContext.tsx
src/layout/: AppLayout.scss  AppLayout.tsx
src/pages/: Commands.scss  Commands.tsx  Home.scss  Home.tsx  Settings.scss  Settings.tsx
src/router/: index.tsx
